Fixed contact page on mobile devices

--- a/vite/src/Components/UI/ContactMe.module.css
+++ b/vite/src/Components/UI/ContactMe.module.css
@@ -208,3 +208,32 @@
         width: 50%;
     }
 }
+
+
+
+@media screen and (max-width: 768px) {
+    .header{
+        font-size: 40px;
+    }
+
+    .row{
+        font-size: 16px;
+    }
+
+    .formcontrol{
+        justify-content: space-between;
+    }
+
+    .formcontrol input{
+        min-width: 140px;
+    }
+
+    .formcontrol label{
+        font-size: 16px;
+        min-width: 150px;
+    }
+
+    .bracket,.bracket2{
+        display: none;
+    }
+}
